updated cheat sheet table

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -252,6 +252,34 @@ table {
                             </div>
                         </table>
                     </div>
+                    <div class="tab">
+                        <input type="radio" id="tab-1" name="tab-group-1" checked>
+                        <label for="tab-1">CSS</label>
+                 
+                        <div class="content">
+                          <table>
+                            <tr>
+                                <th colspan="3"><b>CSS</b></th>
+                            </tr>
+                            <tr>
+                                <td>Element </td>
+                                <td><>p style="color:red"; This is a red sentence>/p</td>
+                                <td><>p a href="www.google.com">google>/p></td>
+                            </tr>
+                            <tr>
+                                <td>Attribute </td>
+                                <td>style="color:red"</td>
+                                <td>href="slicedbread.html"</td>
+                            </tr>
+                            <tr>
+                                <td>Value </td>
+                                <td>>This is a value<</td>
+                                <td>>This could be another value<</td>
+                            </tr>
+                            </div>
+                        </table>
+                        </div> 
+                    </div>
          </div>
         </div>
     </body>
