updated cheat sheet text

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -262,9 +262,9 @@ table {
                                 <th colspan="3"><b>Batch Files</b></th>
                             </tr>
                             <tr>
-                                <td>Element </td>
-                                <td><>p style="color:red"; This is a red sentence>/p</td>
-                                <td><>p a href="www.google.com">google>/p></td>
+                                <td>Initialise a repository </td>
+                                <td>Add files to repository</td>
+                                <td>Commit files to local repository</td>
                             </tr>
                             <tr>
                                 <td>Attribute </td>
