updated github to graph

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -259,7 +259,7 @@ table {
                         <div class="content">
                           <table>
                             <tr>
-                                <th colspan="3"><b>Batch Files</b></th>
+                                <th colspan="3"><b>GitHub</b></th>
                             </tr>
                             <tr>
                                 <td>Initialise a repository </td>
@@ -267,14 +267,14 @@ table {
                                 <td>Commit files to local repository</td>
                             </tr>
                             <tr>
-                                <td>Attribute </td>
+                                <td>Attribute</td>
                                 <td>style="color:red"</td>
                                 <td>href="slicedbread.html"</td>
                             </tr>
                             <tr>
                                 <td>Value </td>
-                                <td>>This is a value<</td>
-                                <td>>This could be another value<</td>
+                                <td>>This is a value</td>
+                                <td>>This could be another value</td>
                             </tr>
                             </div>
                         </table>
