updated github to graph

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -254,7 +254,7 @@ table {
                     </div>
                     <div class="tab">
                         <input type="radio" id="tab-5" name="tab-group-1" checked>
-                        <label for="tab-5">Batch Files</label>
+                        <label for="tab-5">GitHub</label>
                  
                         <div class="content">
                           <table>
