updated github to graph

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -277,18 +277,18 @@
             <table>
                 <tr>
                     <td>Initialise a repository </td>
-                    <td>Add files to repository</td>
+                    <td>git init -b main</td>
+                    <td>free space</td>
+                </tr>
+                <tr>
+                    <td>Add files to a repository</td>
+                    <td>git add .</td>
+                    <td>free space</td>
+                </tr>
+                <tr>
                     <td>Commit files to local repository</td>
-                </tr>
-                <tr>
-                    <td>Attribute</td>
-                    <td>style="color:red"</td>
-                    <td>href="slicedbread.html"</td>
-                </tr>
-                <tr>
-                    <td>Value </td>
-                    <td>>This is a value</td>
-                    <td>>This could be another value</td>
+                    <td>git commit -m "first commit"</td>
+                    <td>free space</td>
                 </tr>
         </div>
         </table>
