updated git name heading

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -201,7 +201,7 @@
                 <tr>
                     <td>Insert horizontal line</td>
                     <td>
-                        <>br>
+                        <br>
                     </td>
                     <td></td>
                 </tr>
@@ -271,7 +271,7 @@
     </div>
     <div class="tab">
         <input type="radio" id="tab-5" name="tab-group-1">
-        <label for="tab-5">GitHub</label>
+        <label for="tab-5">Git</label>
 
         <div class="content">
             <table>
