updated git name heading

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -139,8 +139,10 @@
 </head>
 
 <body>
-    <h2>Liam Nicholson</h2>
-    <p>Technology Consultant Apprentice - BJSS</p>
+    <div class="header">
+        <h1><b></b>Liam Nicholson</h1>
+        <p></b>Technology Consultant Apprentice</p>
+      </div>
     <hr>
     <div class="navbar">
         <a href="index.html#" class="active">Home</a>
