--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,19 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/*Header*/
+.header {
+  padding: 10px;
+  text-align: left;
+  background: #1a1abc;
+  color: white;
+
+}
+
+.header h1 {
+  font-size: 40px;
+}
+
 
 * {
   box-sizing: border-box;
@@ -75,8 +88,10 @@ input[type=submit]:hover {
 </head>
 <body>
 
-<h2>Liam Nicholson</h2>
-<p>Technology Consultant Apprentice - BJSS</p>
+  <div class="header">
+    <h1><b></b>Liam Nicholson</h1>
+    <p></b>Technology Consultant Apprentice</p>
+  </div>
 <hr>
 <div class="navbar">
     <a href="index.html#" class="active">Home</a>
