updated git name heading

--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@ input[type=submit]:hover {
         <label for="email"><a href="https://mail.google.com/mail/u/0/?hl=en-GB#inbox?compose=CllgCKCGmFMlMKlVxCsMPKWMQQWxttzRWrlMpmbwqNzZFtRHpfLWNKHGbrMSrrBCnRSPfjLSLrL"><h4>Email:liamrnicho@gmail.com</h2></Email></a></label>
         <label for="phone number"><a href="tel:07505701693">07505701693</a></label>
         <br>
-        <label for="github"><a href="https://github.com/liamnicho/profile"><h4>GitHub</h2></github></a></label>
+        <label for="github"><a href="https://github.com/liamnicho/profile"><h4>Git</h2></github></a></label>
         <br>
         <label for="linkedin"><a href="https://www.linkedin.com/in/liam-nicholson-75844521a/"><img src="https://www.onrec.com/sites/onrec/directory/files/Linkedin-Logo.png" width="200" height="200" ></a></label>
         <br>
