added git to table

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -271,6 +271,9 @@
         <div class="content">
             <table>
                 <tr>
+                    <td><b>Git</b></td>
+                </tr>
+                <tr>
                     <td>Initialise a repository </td>
                     <td>git init -b main</td>
                     <td>free space</td>
