--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -119,7 +119,7 @@
             left: 0;
             background: white;
             right: 0;
-            bottom: 0;
+            bottom: -300px;
             padding: 20px;
             border: 1px solid #ccc;
         }
@@ -289,6 +289,102 @@
                 </tr>
         </div>
         </table>
+    </div>
+    <div class="tab">
+        <input type="radio" id="tab-6" name="tab-group-1">
+        <label for="tab-6">Go Code</label>
+
+        <div class="content">
+            <table>
+                <tr>
+                    <td><b>GO Code</b></td>
+                </tr>
+                <tr>
+                    <td>Short assignment operator</td>
+                    <td>:=</td>
+                </tr>
+                <tr>
+                    <td>If / Else statements</td>
+                    <td>if 7%2 == 0 {
+                        <br>
+                        fmt.Println("7 is even")
+                        <br>
+                    } else {
+                        <br>
+                        fmt.Println("7 is odd")
+                    }</td>
+                </tr>
+                <tr>
+                    <td>Declare and assign variables</td>
+                    <td>Use var followed by name and data type
+                        <br>
+                        var fruit string
+                        <br>
+                        fruit = "apple"</td>
+                </tr>
+                <tr>
+                    <td>For loops in Go</td>
+                    <td>sum := 0
+                        <br>
+                        for i := 1; i < 5; i++ {
+                            <br>
+                            sum += i
+                        }
+                        <br>
+                        fmt.Println(sum)</td>
+                </tr>
+                <tr>
+                    <td>Functions</td>
+                    <td>Functions begin with func followed by the function name
+                        <br>
+                        func SimpleFunction() {
+                            <br>
+                            fmt.Println("Hello World")
+                    </td>
+                </tr>
+                <tr>
+                    <td>Go mod init</td>
+                    <td>The go mod init command creates a go.mod file
+                        <br>
+                         to track your code's dependencies.</td>
+                </tr>
+                <tr>
+                    <td>How to run go code</td>
+                    <td>go run . </td>
+                </tr>
+        </div>
+        </table>
+    </div>
+    <div class="tab">
+        <input type="radio" id="tab-7" name="tab-group-1">
+        <label for="tab-7">GO tests</label>
+
+        <div class="content">
+            <table>
+                <tr>
+                    <td><b>GO Tests</b></td>
+                </tr>
+                <tr>
+                    <td>Why do we automate testing?</td>
+                    <td>You can fix bugs and make changes to code and know in a short period of time,
+                        that features which users depend on are still functioning.
+                    </td>
+                </tr>
+                <tr>
+                    <td>Example GO test</td>
+                    <td>t.Run("empty string defaults to 'world'", func(t *testing.T) {
+                        <br>
+                        got := Liam("", "English")
+                        <br>
+                        want := "Hello, World"
+                        <br>
+                        assertCorrectMessage(t, got, want)
+                        <br>
+                        })</td>
+                </tr>
+        </div>
+        </table>
+    </div>
     </div>
     </div>
     </div>
