--- a/contact.html
+++ b/contact.html
@@ -2,52 +2,8 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="styles.css">
 <style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/*Header*/
-.header {
-  padding: 10px;
-  text-align: left;
-  background: #1a1abc;
-  color: white;
-
-}
-
-.header h1 {
-  font-size: 40px;
-}
-
-
-* {
-  box-sizing: border-box;
-}
-
-.navbar {
-  overflow: hidden;
-  background-color: grey;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-}
-
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-}
-
-.navbar a.active {
-  background-color: #666;
-  color: white;
-
-}
-
 /* input styles */
 input[type=text], select, textarea {
   width: 100%;
@@ -61,13 +17,6 @@ input[type=text], select, textarea {
 
 input[type=submit]:hover {
   background-color: #45a049;
-}
-
-/* contact section */
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 10px;
 }
 
 /* floats after the columns */
@@ -97,7 +46,7 @@ input[type=submit]:hover {
     <a href="contact.html">Contact</a>
     <a href="cheatsheet.html">Cheatsheet</a>
   </div>
-<div class="container">
+<div id="contactform" class="container">
   <div style="text-align:left">
     <h2>Contact me</h2>
   </div>
