--- a/index.html
+++ b/index.html
@@ -4,95 +4,7 @@
 <title>Page Title</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-}
-
-/*Header*/
-.header {
-  padding: 10px;
-  text-align: left;
-  background: #1a1abc;
-  color: white;
-
-}
-
-.header h1 {
-  font-size: 40px;
-}
-
-.navbar {
-  overflow: hidden;
-  background-color: grey;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-}
-
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-}
-
-.navbar a.active {
-  background-color: #666;
-  color: white;
-}
-
-.row {  
-  display: -ms-flexbox; 
-  display: flex;
-  -ms-flex-wrap: wrap; 
-  flex-wrap: wrap;
-}
-
-/* Left side column*/
-.side {
-  -ms-flex: 30%;
-  flex: 30%;
-  background-color: white;
-  padding: 20px;
-}
-
-/* Right side bigger column */
-.main {   
-  -ms-flex: 70%;
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-}
-
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Responsive layout */
-@media screen and (max-width: 700px) {
-  .row {   
-    flex-direction: column;
-  }
-}
-
-/* Responsive layout */
-@media screen and (max-width: 400px) {
-  .navbar a {
-    float: none;
-    width: 100%;
-  }
-}
-</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
