--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -316,7 +316,8 @@
                     </td>
                     <tr>
                         <td>While loops. A while loop can be emulated using a for loop with a condition statement. The loop will execute as long as the condition
-                            is true. Once the condition is becomes false the loop will terminate.
+                            is true.
+                            Once the condition becomes false the loop will terminate.
                         </td>
                         <td>
                             i := 0
@@ -333,13 +334,11 @@
                 </tr>
                 <tr>
                     <td>Go mod init</td>
-                    <td>The go mod init command creates a go.mod file to track your code's dependencies.
-                        <br> 
-                        It allows you to modules of Go code that can be used in .go files. Inside the go.mod file will be the go version your code supports.
+                    <td>The go mod init command creates a go.mod file to track code dependencies. 
                         <br>
-                        As you add more dependencies it will list the versions your code depends upon. 
-
-
+                        It allows you to create modules of Go code that can be used in .go files.
+                        <br>
+                        Inside of the g
                     </td>
                 </tr>
                 <tr>
@@ -413,7 +412,7 @@
                         fruit = "apple"</td>
                 </tr>
                 <tr>
-                    <td>Shorthand for declaring and initalizing a variable</td>
+                    <td>Shorthand for declaring and assigning a variable</td>
                     <td>:=</td>
                 </tr>
                 <tr>
