--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -161,23 +161,23 @@
                         <th colspan="3"><b>CSS</b></th>
                     </tr>
                     <tr>
-                        <td>Element </td>
-                        <td>
-                            <>p style="color:red"; This is a red sentence>/p
-                        </td>
-                        <td>
-                            <>p a href="www.google.com">google>/p>
-                        </td>
+                        <td>div</td>
+                        <td>Selects all div tags</td>
                     </tr>
                     <tr>
-                        <td>Attribute </td>
-                        <td>style="color:red"</td>
-                        <td>href="slicedbread.html"</td>
+                        <td>*</td>
+                        <td>Selects all elements</td>
                     </tr>
                     <tr>
-                        <td>Value </td>
-                        <td>>This is a value<< /td>
-                        <td>>This could be another value<< /td>
+                        <td>Element with ID</td>
+                        <td>#idname</td>
+                    </tr>
+                        <td>[attribute] [target]</td>
+                        <td>Selects all elements with a target attribute</td>
+                    <tr>
+                        <td>flex-wrap</td>
+                        <td>Specifies whether the flexible items should wrap or not</td>
+
                     </tr>
             </div>
             </table>
