updated git and HTML

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -201,10 +201,27 @@
                 </tr>
                 <tr>
                     <td>Insert horizontal line</td>
+                    <td>hr</td>
                 </tr>
                 <tr>
                     <td>Insert Heading</td>
                     <td>head> /head></td>
+                </tr>
+                <tr>
+                    <td>Attribues</td>
+                    <td>An attribute goes inside of the beginning of a tag 
+                        and is used to adjust the behaviour or display of a HTML element
+                    </td>
+                </tr>
+                <tr>
+                    <td>Values</td>
+                    <td>A value is just the value of the attribute, basically what goes inside the "" marks.</td>
+                </tr>
+                <tr>
+                    <td>HTML Elements</td>
+                    <td>HTML elements are the building blocks of HTML pages. An element starts from the opening of a tag
+                        and ends at the closing tag.
+                    </td>
                 </tr>
         </div>
         </table>
@@ -276,17 +293,18 @@
                 <tr>
                     <td>Initialise a repository </td>
                     <td>git init -b main</td>
-                    <td>free space</td>
                 </tr>
                 <tr>
                     <td>Add files to a repository</td>
                     <td>git add .</td>
-                    <td>free space</td>
                 </tr>
                 <tr>
                     <td>Commit files to local repository</td>
                     <td>git commit -m "first commit"</td>
-                    <td>free space</td>
+                </tr>
+                <tr>
+                    <td>Push updates to GIT</td>
+                    <td>git push</td>
                 </tr>
         </div>
         </table>
