--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -177,7 +177,10 @@
                     <tr>
                         <td>flex-wrap</td>
                         <td>Specifies whether the flexible items should wrap or not</td>
-
+                    </tr>
+                    <tr>
+                        <td>Set Header Size</td>
+                        <td>.header h1</td>
                     </tr>
             </div>
             </table>
@@ -248,6 +251,26 @@
                 <tr>
                     <td>Create a File</td>
                     <td>echo . > filename</td>
+                </tr>
+                <tr>
+                    <td>Change Directory</td>
+                    <td>cd foldername</td>
+                </tr>
+                <tr>
+                    <td>Move up one Directory</td>
+                    <td>cd ..</td>
+                </tr>
+                <tr>
+                    <td>Delete a File</td>
+                    <td>del filename</td>
+                </tr>
+                <tr>
+                    <td>Open a file in VS Code</td>
+                    <td>code filename</td>
+                </tr>
+                <tr>
+                    <td>Copy a file to a Folder</td>
+                    <td>copy filename foldername</td>
                 </tr>
         </div>
         </table>
