updated go code 2 and git

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -329,6 +329,10 @@
                     <td>Push updates to GIT</td>
                     <td>git push</td>
                 </tr>
+                <tr>
+                    <td>View git log</td>
+                    <td>--oneline</td>
+                </tr>
         </div>
         </table>
     </div>
