--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -199,7 +199,7 @@
                 <tr>
                     <td>Create new paragraph</td>
                     <td>
-                        <>p> <>/p>
+                        &lt;p&gt; ... &lt;/p&gt;
                     </td>
                 </tr>
                 <tr>
@@ -208,7 +208,7 @@
                 </tr>
                 <tr>
                     <td>Insert Heading</td>
-                    <td>head> /head></td>
+                    <td>&lt;head&gt; ... &lt;/head&gt;</td>
                 </tr>
                 <tr>
                     <td>Attribues</td>
@@ -224,6 +224,8 @@
                     <td>HTML Elements</td>
                     <td>HTML elements are the building blocks of HTML pages. An element starts from the opening of a tag
                         and ends at the closing tag.
+                        <br>
+                        &lt;p&gt; This is a paragraph &lt;/p&gt;
                     </td>
                 </tr>
         </div>
