added java pictures

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -148,6 +148,7 @@
         <a href="index.html#" class="active">Home</a>
         <a href="contact.html">Contact</a>
         <a href="cheatsheet.html">Cheatsheet</a>
+        <a href="pictures.html">Pictures</a>
     </div>
     <div class="tabs">
 
