--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@ input[type=submit]:hover {
     <a href="index.html#" class="active">Home</a>
     <a href="contact.html">Contact</a>
     <a href="cheatsheet.html">Cheatsheet</a>
+    <a href="pictures.html">Pictures</a>
   </div>
 <div id="contactform" class="container">
   <div style="text-align:left">
