--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <a href="index.html#" class="active">Home</a>
   <a href="contact.html">Contact</a>
   <a href="cheatsheet.html">Cheatsheets</a>
+  <a href="pictures.html">Pictures</a>
 </div>
 
 <div class="row">
