added buttons and header

--- a/pictures.html
+++ b/pictures.html
@@ -48,6 +48,18 @@ img{
 </style>
 </head>
 <body>
+    <div class="header">
+        <h1><b></b>Liam Nicholson</h1>
+        <p></b>Technology Consultant Apprentice</p>
+      </div>
+      
+      <div class="navbar">
+        <a href="index.html#" class="active">Home</a>
+        <a href="contact.html">Contact</a>
+        <a href="cheatsheet.html">Cheatsheets</a>
+        <a href="pictures.html">Pictures</a>
+      </div>
+      
     <div class="wrapper">
         <h2>Slick Carousel Example<h2>
             <div class="carousel">
