updated css for taskbar

--- a/pictures.html
+++ b/pictures.html
@@ -46,6 +46,7 @@ img{
     max-height: 200px;
 }
 </style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
@@ -59,7 +60,7 @@ img{
         <a href="cheatsheet.html">Cheatsheets</a>
         <a href="pictures.html">Pictures</a>
       </div>
-      
+
     <div class="wrapper">
         <h2>Slick Carousel Example<h2>
             <div class="carousel">
